--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -40,7 +40,7 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('languages', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('langues', this)">
       <span class="collapsible-title">Langues</span>
       <span class="arrow-icon">▼</span>
     </h3>
