index_html links changes

--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -5,19 +5,17 @@
     <h1>Welcome</h1>
     <h2>Maud Gesbert – Data Scientist</h2>
 
-    <p>Explore my data science projects:</p>
-    <ul>
-        <li><a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a></li>
-    </ul>
+    <p>Explore my data science projects:<br>
+    <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a>
+    </p>
 
-    <p>Explore my data analysis projects:</p>
-    <ul>
-        <li><a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a></li>
-    </ul>
+    <p>Explore my data analysis projects:</p><br>
+    <a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a>
+    </p>
 
-    <p>View a more complete version of my resume:</p>
-    <ul>
-        <li><a href="/cv?lang=en">Resume</a></li>
-    </ul>
+    <p>View a more complete version of my resume:<br>
+    <a href="/cv?lang=en">Resume</a>
+    </p>
+
 </div>
 {% endblock %}
