index_html links changes_2

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,17 @@
   <h1>Bienvenue</h1>
   <h2>Maud Gesbert – Data Scientist</h2>
 
-  <p>Explorez mes projets de science des données :</p>
-  <ul>
+  <p>Explorez mes projets de science des données<br>
       <a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a>
-  </ul>
+  </p><br><br>
 
-  <p>Explorez mes projets d'analyses des données :</p>
-  <ul>
+  <p>Explorez mes projets d'analyses des données
       <a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a>
-  </ul>
+  </p><br><br>
 
-  <p>Parcourez une version plus complète de mon CV :</p>
-  <ul>
+  <p>Parcourez une version plus complète de mon CV
       <a href="/cv">CV</a>
-  </ul>
+  </p><br><br>
+  
 </div>
 {% endblock %}
