index_html links changes_3

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
       <a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a>
   </p><br><br>
 
-  <p>Explorez mes projets d'analyses des données
+  <p>Explorez mes projets d'analyses des données<br>
       <a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a>
   </p><br><br>
 
-  <p>Parcourez une version plus complète de mon CV
+  <p>Parcourez une version plus complète de mon CV<br>
       <a href="/cv">CV</a>
   </p><br><br>
-  
+
 </div>
 {% endblock %}
