--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -7,9 +7,9 @@
 
     <p>Explore my data science projects:<br>
     <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a>
-    </p><br><br>
+    </p><br>
 
-    <p>Explore my data analysis projects:</p><br>
+    <p>Explore my data analysis projects:<br>
     <a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a>
     </p><br><br>
 
