removing lite adding aloe

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   </p><br><br>
 
   <p>Explorez mes projets d'analyses des données<br>
-      <a href="/projects/lite">Lite - Consommation énergétique des voitures éléctriques</a>
+      <a href="/projects/aloe">Analyse des ventes d'une jeune entreprise</a>
   </p><br><br>
 
   <p>Parcourez une version plus complète de mon CV<br>
