--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <ul class="nav-links">
           <li><a href="/">Accueil/Home</a></li>
           <li><a href="/projects/heart_disease">Maladie Cardiaque/Heart Disease</a></li>
-          <li><a href="/projects/lite">Lite</a></li>
+          <li><a href="/projects/aloe">Aloe Vera</a></li>
           <li><a href="/cv">CV/Resume</a></li>
         </ul>
       </div>
