adding github links

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,10 @@
       <a href="/cv">CV</a>
   </p><br><br>
 
+  <p>Retrouvez le code des projets sur github<br>
+     https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects
+  </p><br><br>
+  
+
 </div>
 {% endblock %}
