--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -17,5 +17,9 @@
     <a href="/cv?lang=en">Resume</a>
     </p>
 
+    <p>Find each project's code on github<br>
+       https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects
+     </p><br><br>
+
 </div>
 {% endblock %}
