--- a/templates/projects/aloe/aloe.html
+++ b/templates/projects/aloe/aloe.html
@@ -13,10 +13,10 @@
   <div id="description-section" class="collapsible-content">
     <p>
       Analyse réalisée pour une jeune entreprise qui vend des produits à base d'Aloe Vera.<br>
-      Le gérant de l'entreprise m'a fourni plusiuers fichiers excel : un contenant les ventes, un autre recensant les vendeurs,
+      Le gérant de l'entreprise m'a fourni plusieurs fichiers excel : un contenant les ventes, un recensant les vendeurs
       et enfin, un fichier recensant les clients (des pharmacies).<br>
       En recoupant les différents fichiers, j'ai pu fournir une analyse des ventes en fonctions des vendeurs et des clients, 
-      tout en mettant en valeur les périodes de l'années auxquelles les ventes étaient les meilleurs.<br><br>
+      tout en mettant en valeur les périodes de l'années auxquelles les ventes étaient les meilleures.<br><br>
       <strong>NB :</strong> Les données sur les clients et les vendeurs sont anonymisées. Tous les noms ont été changés.<br>
       Pour respecter la demande du gérant de ne pas divulguer trop d'information, je ne montrerai qu'un extrait des analyses effectuées.
     </p>
@@ -26,7 +26,7 @@
 <!-- Collapsible: PDF -->
 <div class="collapsible-block">
   <h3 class="collapsible-toggle" onclick="toggleSection('pdf-section', this)">
-    <span class="collapsible-title">Étapes de création du modèle</span>
+    <span class="collapsible-title">Étapes de l'analyse</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="pdf-section" class="collapsible-content">
