adding github links_2

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,11 @@
   </p><br><br>
 
   <p>Retrouvez le code des projets sur github<br>
-     https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects
+    <a href="https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects" 
+    target="_blank" rel="noopener noreferrer" 
+    style="font-size: 2rem; color: black; transition: color 0.3s;">
+    <i class="fab fa-github"></i>
+    </a>
   </p><br><br>
   
 
