--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -7,7 +7,7 @@
 
     <p>Explore my data science projects:<br>
     <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a>
-    </p><br>
+    </p><br><br>
 
     <p>Explore my data analysis projects:<br>
     <a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a>
@@ -15,10 +15,13 @@
 
     <p>View a more complete version of my resume:<br>
     <a href="/cv?lang=en">Resume</a>
-    </p>
+    </p><br><br>
 
     <p>Find each project's code on github<br>
-       https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects
+        <a href="https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects" 
+        target="_blank" rel="noopener noreferrer" style="font-size: 2rem;">
+       <i class="fab fa-github"></i>
+        </a>
      </p><br><br>
 
 </div>
