--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
   
     <!-- 2. Chosen style -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <!-- 2. Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   </head>
 <body>
   <header>
