adding github links_3

--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -17,12 +17,14 @@
     <a href="/cv?lang=en">Resume</a>
     </p><br><br>
 
-    <p>Find each project's code on github<br>
+    <p>
         <a href="https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects" 
-        target="_blank" rel="noopener noreferrer" style="font-size: 2rem;">
-       <i class="fab fa-github"></i>
+           target="_blank" rel="noopener noreferrer" 
+           style="font-size: 2rem; text-decoration: none; color: inherit; cursor: pointer;">
+          Find each project's code on GitHub<br>
+          <i class="fab fa-github"></i>
         </a>
-     </p><br><br>
+      </p>
 
 </div>
 {% endblock %}
