--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,14 @@
       <a href="/cv">CV</a>
   </p><br><br>
 
-  <p>Retrouvez le code des projets sur github<br>
+  <p>
     <a href="https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects" 
-    target="_blank" rel="noopener noreferrer" 
-    style="font-size: 2rem; color: black; transition: color 0.3s;">
-    <i class="fab fa-github"></i>
+       target="_blank" rel="noopener noreferrer" 
+       style="font-size: 2rem; text-decoration: none; color: inherit; cursor: pointer;">
+      Retrouvez le code des projets sur GitHub<br>
+      <i class="fab fa-github"></i>
     </a>
-  </p><br><br>
+  </p>
   
 
 </div>
