adding linkedin link

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,15 @@
       <i class="fab fa-github"></i>
     </a>
   </p>
+
+  <p>
+    <a href="https://www.linkedin.com/in/maud-g-a48697107/" 
+       target="_blank" rel="noopener noreferrer" 
+       style="font-size: 2rem; text-decoration: none; color: inherit; cursor: pointer;">
+      Retrouvez moi sur LinkedIn<br>
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </p>
   
 
 </div>
