--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -20,9 +20,18 @@
     <p>
         <a href="https://github.com/MaudGes/Maud_Gesbert-Portfolio/tree/main/templates/projects" 
            target="_blank" rel="noopener noreferrer" 
-           style="font-size: 2rem; text-decoration: none; color: inherit; cursor: pointer;">
+           style="font-size: 1rem; text-decoration: none; color: inherit; cursor: pointer;">
           Find each project's code on GitHub<br>
           <i class="fab fa-github"></i>
+        </a>
+      </p>
+
+      <p>
+        <a href="https://www.linkedin.com/in/maud-g-a48697107/" 
+           target="_blank" rel="noopener noreferrer" 
+           style="font-size: 1rem; text-decoration: none; color: inherit; cursor: pointer;">
+          Find me on LinkedIn<br>
+          <i class="fab fa-linkedin"></i>
         </a>
       </p>
 
