--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -21,7 +21,7 @@
       <p><important-text>Languages & Frameworks</important-text><br>
       Python, MySQL, PostgreSQL, NoSQL, Git, MLFlow</p>
       <p><important-text>Machine & Deep Learning</important-text><br>
-      Linear Regression, XGBoost, SVM, CNN, NLP...</p>
+      Linear Regression, XGBoost, SVM, Convolutional neural network (CNN), Natural Language Processing (NLP)...</p>
       <p><important-text>Big Data & Cloud:</important-text><br>
       PySpark, Hadoop, AWS</p>
       <p><important-text>MLOps & Deployment</important-text><br>
