--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -10,7 +10,7 @@
     </p><br><br>
 
     <p>Explore my data analysis projects:<br>
-    <a href="/projects/lite?lang=en">Lite - Energy consumption of electric cars</a>
+    <a href="/projects/aloe">Sales analysis for a young company</a>
     </p><br><br>
 
     <p>View a more complete version of my resume:<br>
