--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -21,7 +21,7 @@
       <p><important-text>Langages & frameworks :</important-text><br>
       Python, MySQL, PostgreSQL, NoSQL, Git, MLFlow</p>
       <p><important-text>Machine & Deep Learning :</important-text><br>
-      Régression linéaire, XGBoost, SVM, CNN, NLP...</p>
+      Régression linéaire, XGBoost, SVM, Réseaux de neurones convolutifs (CNN), Traitement du langage naturel (NLP)...</p>
       <p><important-text>Big Data & Cloud :</important-text><br>
       PySpark, Hadoop, AWS</p>
       <p><important-text>MLOps & Déploiement :</important-text><br>
@@ -94,7 +94,7 @@
             </li>
           </ul>
         </li>
-        <li>
+        <li><br>
           <important-text>Contrôleuse de gestion – Airbus Defence and Space</important-text><br>
           (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br><br>
           Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis<br><br> 
@@ -110,7 +110,7 @@
             </li>
           </ul>
         </li>
-        <li>
+        <li><br>
           <important-text>Analyste financière – Amazon</important-text><br> 
           (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
           Compétences : Gestion financière · Client Relations · Business Analysis <br><br> 
@@ -126,7 +126,7 @@
             </li> 
           </ul>
         </li>
-        <li>
+        <li><br>
           <important-text>Ingénieure Commercial – Bertin Technologies</important-text><br>
           (oct. 2018 - nov. 2019, Singapour)<br><br>
           Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
@@ -154,7 +154,7 @@
           Trois nouveaux contrats de distribution ont été conclus, générant une augmentation des ventes de 30% sur la zone APAC.<br>
 
         </li>
-        <li>
+        <li><br>
           <important-text>Consultante Junior – SunTseu</important-text> <br>
           (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
           Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
@@ -225,7 +225,7 @@
           Traitement Big Data sur le Cloud<br> 
           Cadrage d’un projet IA
         </li>
-        <li>
+        <li><br>
           <important-text>Bootcamp Analyse de données – DataBird</important-text> <br>(févr. 2023 - mai 2023)<br><br>
           Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
           Activités et associations :<br>
@@ -234,7 +234,7 @@
           Cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping)<br> 
           Visualisation avec Tableau
         </li>
-        <li>
+        <li><br>
           <important-text>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</important-text><br> (oct. 2019 - mars 2022)<br><br>
           Compétences : Analyse financière · Indicateurs clés de performances <br><br> 
           Cours :<br>
@@ -243,7 +243,7 @@
           Finance quantitative et marchés financiers<br> 
           Fusion, acquisition et capital privé
         </li>
-        <li>
+        <li><br>
           <important-text>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</important-text> <br>(2015 - 2017)<br><br>
           Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performances · Biostatistiques <br><br> 
           Cours :<br>
@@ -255,7 +255,7 @@
           Marketing stratégique et opérationnel des bioproduits<br>
           Immunotechnologies
         </li>
-        <li>
+        <li><br>
           <important-text>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</important-text> <br>(sept. 2012 - mai 2015)<br><br>
           Compétences : Secteur de la biotechnologie · Biostatistiques<br><br> 
           Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
