--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         {{ 'English' if lang == 'fr' else 'Français' }}
       </a>
     {% elif request.endpoint == 'aloe_vera' %}
-      <a href="{{ url_for('aloe', lang='en' if lang == 'fr' else 'fr') }}" class="lang-btn">
+      <a href="{{ url_for('aloe_vera', lang='en' if lang == 'fr' else 'fr') }}" class="lang-btn">
         {{ 'English' if lang == 'fr' else 'Français' }}
       </a>
     {% elif request.endpoint == 'show_project' and request.view_args.project == 'lite' %}
