--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
   <h2>Maud Gesbert – Data Scientist</h2>
 
   <p>Explorez mes projets de science des données<br>
-      <a href="/projects/heart_disease">Prédiction sur la possibilité de développer une maladie cardiaque</a>
+      <a href="/projects/heart_disease">Modèle pour prédire évaluer la possibilité de développer une maladie cardiaque</a>
+      <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a>
   </p><br><br>
 
   <p>Explorez mes projets d'analyses des données<br>
