--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -7,6 +7,8 @@
 
     <p>Explore my data science projects:<br>
     <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a>
+    <a href="/projects/seattle">Energy consumption prediction model for buildings in Seattle</a>
+
     </p><br><br>
 
     <p>Explore my data analysis projects:<br>
