--- a/templates/projects/aloe/aloe.html
+++ b/templates/projects/aloe/aloe.html
@@ -13,7 +13,7 @@
   <div id="description-section" class="collapsible-content">
     <p>
       Analyse réalisée pour une jeune entreprise qui vend des produits à base d'Aloe Vera.<br>
-      Le gérant de l'entreprise m'a fourni plusieurs fichiers excel : un contenant les ventes, un recensant les vendeurs
+      Le gérant de l'entreprise m'a fourni plusieurs fichiers CSV : un contenant les ventes, un recensant les vendeurs
       et enfin, un fichier recensant les clients (des pharmacies).<br>
       En recoupant les différents fichiers, j'ai pu fournir une analyse des ventes en fonctions des vendeurs et des clients, 
       tout en mettant en valeur les périodes de l'années auxquelles les ventes étaient les meilleures.<br><br>
