--- a/templates/projects/aloe/aloe_en.html
+++ b/templates/projects/aloe/aloe_en.html
@@ -17,7 +17,7 @@
       and another listing the customers (pharmacies).<br>
       By cross-referencing the different files, I was able to analyze the sales based on salespeople and customers,
       while also highlighting the times of the year when sales were highest.<br><br>
-      <strong>Note:</strong> The data on custoemrs and salespeople is anonymized. All names have been changed.<br>
+      <strong>Note:</strong> The data on customers and salespeople is anonymized. All names have been changed.<br>
       To respect the manager's request not to disclose too much information, I will only show an excerpt of the analysis.
     </p>
   </div>
