--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
         <ul class="nav-links">
           <li><a href="/">Accueil/Home</a></li>
           <li><a href="/projects/heart_disease">Maladie Cardiaque/Heart Disease</a></li>
+          <li><a href="/projects/seattle">Seattle</a></li>
           <li><a href="/projects/aloe">Aloe Vera</a></li>
           <li><a href="/cv">CV/Resume</a></li>
         </ul>
