--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -6,7 +6,7 @@
     <h2>Maud Gesbert – Data Scientist</h2>
 
     <p>Explore my data science projects:<br>
-    <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a>
+    <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a><br>
     <a href="/projects/seattle">Energy consumption prediction model for buildings in Seattle</a>
 
     </p><br><br>
