--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,10 @@
       <a href="{{ url_for('aloe_vera', lang='en' if lang == 'fr' else 'fr') }}" class="lang-btn">
         {{ 'English' if lang == 'fr' else 'Français' }}
       </a>
+      {% elif request.endpoint == 'seattle' %}
+      <a href="{{ url_for('seattle', lang='en' if lang == 'fr' else 'fr') }}" class="lang-btn">
+        {{ 'English' if lang == 'fr' else 'Français' }}
+      </a>
     {% elif request.endpoint == 'show_project' and request.view_args.project == 'lite' %}
       <a href="{{ url_for('show_project', project='lite', lang='en' if lang == 'fr' else 'fr') }}" class="lang-btn">
         {{ 'English' if lang == 'fr' else 'Français' }}
