header color changes_2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,10 +195,10 @@ footer {
   display: inline-block;
 }
 
-/* Link behavior */
+/* Link behavior 
 a:visited {
   color: var(--color-h2);
-}
+}*/
 
 a {
   color: inherit;
