--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@
 
 /* Color palette */
 :root {
-  --color-primary: #B76E79;     /* Main pink */
+  --color-primary:#008080;     /* Main pink */
   --color-h2: #004958;          /* Teal for h2 */
   --color-secondary: #666666;   /* Secondary text */
   --color-bg: #FFFFFF;          /* Background */
