--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,20 +152,21 @@ color-jade {
 
 /* Language switch button */
 .lang-btn {
-  display: inline-block;
-  background-color: #007bff;
-  color: var(--color-btn-text);
-  color: white;
-  padding: 0.4rem 0.8rem;
-  border-radius: 20px;
+  background-color: var(--color-btn-bg); 
+  color: var(--color-btn-text);          /* white texte */
+  padding: 0.6rem 1.2rem;                /* a little bigger */
+  border-radius: 25px;
   text-decoration: none;
-  font-size: 0.9rem;
-  transition: background-color 0.3s ease;
+  font-size: 1.1rem;                     /* bigger text */
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.2s ease;
   transform: translateY(4px);
+  cursor: pointer;
 }
 
 .lang-btn:hover {
-  background-color: #0056b3;
+  background-color: var(--color-primary); /* hoover color*/
+  transform: translateY(2px);             /* hoover */
 }
 
 .language-bar {
