--- a/templates/projects/seattle/seattle_en.html
+++ b/templates/projects/seattle/seattle_en.html
@@ -33,12 +33,12 @@
   <div id="pdf-section" class="collapsible-content">
     <div class="mt-4" style="height:600px; overflow:auto;">
       <object
-        data="{{ url_for('static', filename='images/Maladie_Cardiaque_PPT.pdf') }}"
+        data="{{ url_for('static', filename='images/Seattle_EN.pdf') }}"
         type="application/pdf"
         width="100%"
         height="100%">
         <p>Your browser does not support PDFs.
-          <a href="{{ url_for('static', filename='images/Maladie_Cardiaque_PPT.pdf') }}">Download the PDF</a>
+          <a href="{{ url_for('static', filename='images/Seattle_EN.pdf') }}">Download the PDF</a>
         </p>
       </object>
     </div>
