--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,16 @@
   <h1>Bienvenue</h1>
   <h2>Maud Gesbert – Data Scientist</h2>
 
-  <p>Explorez mes projets de science des données<br>
+  <p><h2>Explorez mes projets de science des données</h2><br>
       <a href="/projects/heart_disease">Modèle pour évaluer la possibilité de développer une maladie cardiaque</a><br>
       <a href="/projects/seattle">Modèle pour prédire la consommation en énergie de bâtiments à Seattle</a>
   </p><br><br>
 
-  <p>Explorez mes projets d'analyses des données<br>
+  <p><h2>Explorez mes projets d'analyses des données</h2><br>
       <a href="/projects/aloe">Analyse des ventes d'une jeune entreprise</a>
   </p><br><br>
 
-  <p>Parcourez une version plus complète de mon CV<br>
+  <p><h2>Parcourez une version plus complète de mon CV</h2><br>
       <a href="/cv">CV</a>
   </p><br><br>
 
