--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <header>
     <nav>
       <div class="nav-container">
-        <a href="/" class="logo">Maud Gesbert</a>
+        <a href="/" class="logo">Maud Gesbert - Data Scientist</a>
         <ul class="nav-links">
           <li><a href="/">Accueil/Home</a></li>
           <li><a href="/projects/heart_disease">Maladie Cardiaque/Heart Disease</a></li>
