--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -3,19 +3,18 @@
 {% block content %}
 <div class="centered-content">
     <h1>Welcome</h1>
-    <h2>Maud Gesbert – Data Scientist</h2>
 
-    <p>Explore my data science projects:<br>
+    <p><h2>Explore my data science projects</h2><br>
     <a href="{{ url_for('heart_disease', lang='en') }}">Heart Disease Risk Prediction</a><br>
     <a href="/projects/seattle">Energy consumption prediction model for buildings in Seattle</a>
 
     </p><br><br>
 
-    <p>Explore my data analysis projects:<br>
+    <p><h2>Explore my data analysis projects</h2><br>
     <a href="/projects/aloe">Sales analysis for a young company</a>
     </p><br><br>
 
-    <p>View a more complete version of my resume:<br>
+    <p><h2>View a more complete version of my resume</h2><br>
     <a href="/cv?lang=en">Resume</a>
     </p><br><br>
 
