--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -87,7 +87,7 @@
             </ul>
           </li>
           <li style="list-style-type: none;"><br>
-            <important-text>Management Controller – Airbus Defence and Space</important-text><br>
+            <important-text>Financial Controller – Airbus Defence and Space</important-text><br>
             (May 2022 - May 2023, Toulouse, Occitanie, France)<br><br>
             Skills: Financial Management · Key Performance Indicators · Business Analysis<br><br>
             <ul>
