--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -121,6 +121,19 @@
             </ul>
             Three new distribution contracts were signed, generating a 30% increase in sales across the APAC region.<br>
           </li>
+          <li>
+            <important-text>Junior CRM Consultant – SunTseu</important-text><br>
+            (Oct 2018 - Nov 2019, Chatillon)<br><br>
+            Within the life sciences business unit :
+            Skills: Client Relations · Requirements gathering<br><br>
+            In the division dedicated to pharmaceutical equipment:<br>
+            <li>Manage CRM software change projects, create dashboards and schedule meetings</li>
+            <li>Gather business requirements from the employees in the target company and communicate them to the software 
+              developer in order to have all the necessary functionalities in the CRM software</li>
+            <li>Analyse and model business processes</li>
+            <li>Support clients in change management once the software is implemented</li>
+            Tests in a Salesforce and Veeva (CRM Softwares)
+          </li>
         </ul>
       </section>
     </div>
