--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -126,7 +126,7 @@
             (Oct 2018 - Nov 2019, Chatillon)<br><br>
             Within the life sciences business unit :
             Skills: Client Relations · Requirements gathering<br><br>
-            In the division dedicated to pharmaceutical equipment:<br>
+            Within the life sciences business unit :<br>
             <ul>
             <li>Manage CRM software change projects, create dashboards and schedule meetings</li>
             <li>Gather business requirements from the employees in the target company and communicate them to the software 
