cv remove asso databird

--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -228,8 +228,7 @@
         <li style="list-style-type: none;"><br><br>
           <important-text>Bootcamp Analyse de données – DataBird</important-text> <br>(févr. 2023 - mai 2023)<br><br>
           Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
-          Activités et associations :<br>
-          Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
+          Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br><br>
           Cours avancés sur l'extraction et la manipulation de données avec SQL<br>
           Cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping)<br> 
           Visualisation avec Tableau
