--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -179,8 +179,7 @@
           <li style="list-style-type: none;"><br>
             <important-text>Data Analysis Bootcamp – DataBird</important-text><br>(Feb 2023 - May 2023)<br><br>
             Skills: GitHub, Reporting and Analysis, Statistics, ETL, Databases, Python, SQL, Tableau, Data Visualization<br><br>
-            Activities and clubs:<br>
-            Conducted a data analysis project in partnership with a company to provide an in-depth sales analysis<br>
+            Conducted a data analysis project in partnership with a company to provide an in-depth sales analysis<br><br>
             Advanced SQL data extraction and manipulation courses<br>
             Advanced Python courses (statistical studies with Pandas and NumPy, REST API queries, scraping)<br>
             Visualizations using Tableau
