HD fr explanation

--- a/templates/projects/heart_disease/heart_disease_en.html
+++ b/templates/projects/heart_disease/heart_disease_en.html
@@ -117,7 +117,7 @@
 <!-- Collapsible: PDF -->
 <div class="collapsible-block">
   <h3 class="collapsible-toggle" onclick="toggleSection('pdf-section', this)">
-    <span class="collapsible-title">Model Creation Steps</span>
+    <span class="collapsible-title">Model Building Steps</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="pdf-section" class="collapsible-content">
