HD fr explanation_2

--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -16,7 +16,7 @@
       une agence américaine dédiée à la prévention des maladies, des blessures et des handicaps.<br>
       Les participants à cette étude devaient répondre à des questions sur leur santé, et indiquer s'ils avaient déjà
       eu une maladie cardiaque ou une crise cardiaque.<br>
-      En utilisant les réponses données, j'ai pu construire un mdèle qui prédit si une personne est à risque de développer une maladie cardiaque.<br><br>
+      En utilisant les réponses données, j'ai pu construire un modèle qui prédit si une personne est à risque de développer une maladie cardiaque.<br><br>
       <strong>NB :</strong> Pour respecter le RGPD, les données que vous fournissez ne sont pas conservées et sont supprimées à la fermeture ou au rechargement de la page.
     </p>
   </div>
