Seattle pdf en corrections

--- a/templates/projects/seattle/seattle.html
+++ b/templates/projects/seattle/seattle.html
@@ -12,7 +12,7 @@
   </h3>
   <div id="description-section" class="collapsible-content">
     <p>
-      Projet personnel scolaire réalisé pour mon master en Data Science.<br>
+      Projet scolaire réalisé pour mon master en Data Science.<br>
       L’objectif de la ville de Seattle est d’être neutre en carbone d’ici 2050. 
       Pour y parvenir, des enquêtes ont été menées par des agents en 2015 et 2016 sur la consommation énergétique des bâtiments.<br>
       Ces enquêtes sont fastidieuses et demandent beaucoup de travail, c’est pourquoi la ville souhaite prédire les données des bâtiments non résidentiels qui n’ont pas encore été inspectés, et ainsi éviter d'envoyer des agents sur place.
